--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,10 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
     --toast-bg: #f5f5f4e5;
+    --loader-color-one: #141414;
+    --loader-color-two: rgb(88, 141, 255);
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -61,6 +64,8 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
     --toast-bg: #27272a;
+    --loader-color-one: #ffffff;
+    --loader-color-two: rgb(70, 126, 255);
   }
 }
 
@@ -68,18 +73,81 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
 
-
 textarea::-webkit-scrollbar {
   display: none;
 }
-textarea::-webkit-resizer {
-  display: none;
-}
+
 textarea {
   scrollbar-width: none;
+  z-index: 5;
+
+  &::placeholder {
+    color: var(--muted-foreground);
+  }
+}
+
+.loader {
+  width: 70px;
+  aspect-ratio: 1;
+  background: radial-gradient(farthest-side, var(--loader-color-one) 90%, #0000) center/16px 16px,
+    radial-gradient(farthest-side, var(--loader-color-two) 90%, #0000) bottom/12px 12px;
+  background-repeat: no-repeat;
+  animation: l17 1s infinite linear;
+  position: relative;
+}
+
+.loader::before {
+  content: '';
+  position: absolute;
+  width: 8px;
+  aspect-ratio: 1;
+  inset: auto 0 16px;
+  margin: auto;
+  background: #ccc;
+  border-radius: 50%;
+  transform-origin: 50% calc(100% + 10px);
+  animation: inherit;
+  animation-duration: 0.5s;
+}
+
+@keyframes l17 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
+
+.imageContainer {
+  position: relative;
+  width: max-content;
+
+  .foregroundImg {
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    pointer-events: none;
+  }
+
+  .backgroundImg {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    transform: scale(1.02);
+    transition: all 0.5s ease;
+    opacity: 1;
+    filter: blur(20px);
+    z-index: 1;
+  }
+
+  &:hover {
+    .backgroundImg {
+      transform: scale(1.05);
+      filter: blur(25px);
+    }
+  }
 }
